Add muted status message for spam handling

--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -159,6 +159,9 @@ spam:
   banned: |
     ${name} was permanently banned from the group.
     Reason: ${reason}
+  muted: |
+    ${name} was muted for 24 hours.
+    Reason: ${reason}
 
 only_group: This command is available only in group
 only_admin: This command can only be used by a group administrator.
