--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -156,6 +156,9 @@ spam:
   banned: |
     ${name} був забанений назавжди.
     Причина: ${reason}
+  muted: |
+    ${name} був заглушений на 24 години.
+    Причина: ${reason}
 
 only_group: Ця команда доступна тільки в групі
 only_admin: Цю команду може використовувати тільки адміністратор групи
