--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -162,3 +162,6 @@ spam:
 
 only_group: Ця команда доступна тільки в групі
 only_admin: Цю команду може використовувати тільки адміністратор групи
+
+global_ban:
+  kicked: "Користувача {name} було вилучено, оскільки він глобально забанений ШІ. Причина: {reason}"
