Update global ban messages in multiple languages to ensure consistent formatting with placeholders for user name and reason

--- a/locales/by.yaml
+++ b/locales/by.yaml
@@ -112,3 +112,6 @@ kick:
   error: <b>У мяне не атрымалася штурхнуць</b>\n<pre>${error}</pre>
 del:
   error: <b>У мяне не атрымалася выдаліць вестку</b>\n<pre>${error}</pre>
+
+global_ban:
+  kicked: "Карыстальнік ${name} быў выключаны, бо ен глабальна забанены ШІ. Прычына: ${reason}"
