--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -157,3 +157,6 @@ cas:
 
 only_group: Эта команда доступна только в группах
 only_admin: Команду может использовать только администратор группы.
+
+global_ban:
+  kicked: "Пользователь ${name} был исключен, так как он глобально забанен ИИ. Причина: ${reason}"
