--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -164,4 +164,4 @@ only_group: Ця команда доступна тільки в групі
 only_admin: Цю команду може використовувати тільки адміністратор групи
 
 global_ban:
-  kicked: "Користувача {name} було вилучено, оскільки він глобально забанений ШІ. Причина: {reason}"
+  kicked: "Користувача ${name} було вилучено, оскільки він глобально забанений ШІ. Причина: ${reason}"
