--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -182,5 +182,5 @@ only_group: This command is available only in group
 only_admin: This command can only be used by a group administrator.
 
 global_ban:
-  kicked: "User {name} has been kicked because they are globally banned by AI. Reason: {reason}"
+  kicked: "User ${name} has been kicked because they are globally banned by AI. Reason: ${reason}"
 
