Add spam settings with global ban options and localization support

--- a/locales/by.yaml
+++ b/locales/by.yaml
@@ -97,6 +97,43 @@ cmd:
     member: |
       <a href="tg://user?id=${telegram_id}">${telegram_id}</a>
       ${banTime} | a: ${active} | f: ${flood}
+  spam_settings:
+    enabled: "✅ <b>Аўтаматычная праверка на спам уключана</b>"
+    disabled: "❌ <b>Аўтаматычная праверка на спам выключана</b>"
+    allow:
+      added: "✅ <b>Дададзена правіла дазволу:</b>\n\"${rule}\""
+      error: "❌ <b>Памылка:</b> Укажыце тэкст правіла\n\n<b>Прыклад:</b> <code>!spam allow продаж курсавых</code>"
+    deny:
+      added: "✅ <b>Дададзена правіла забароны:</b>\n\"${rule}\""
+      error: "❌ <b>Памылка:</b> Укажыце тэкст правіла\n\n<b>Прыклад:</b> <code>!spam deny рэклама заробку</code>"
+    remove:
+      success: "✅ <b>Выдалена правіла:</b>\n\"${rule}\""
+      error: "❌ <b>Памылка:</b> Няправільны нумар правіла\n\nВыкарыстоўвайце <code>!spam</code> каб пабачыць спіс правіл"
+    clear: "✅ <b>Ачышчаны ўсе правілы</b> (было: ${count})"
+    globalban:
+      enabled: "✅ <b>Глабальны бан уключаны</b>\n• Карыстальнікі, заблакіраваныя ШІ ў гэтай групе, будуць заблакіраваны ва ўсіх іншых групах\n• Карыстальнікі, заблакіраваныя ШІ ў іншых групах, будуць заблакіраваны ў гэтай групе"
+      disabled: "❌ <b>Глабальны бан выключаны</b>\n• Карыстальнікі, заблакіраваныя ШІ ў гэтай групе, НЕ будуць заблакіраваны ў іншых групах\n• Карыстальнікі, заблакіраваныя ШІ ў іншых групах, НЕ будуць заблакіраваны ў гэтай групе"
+      error: "❌ <b>Памылка:</b> Выкарыстоўвайце <code>!spam globalban on</code> або <code>!spam globalban off</code>"
+    status:
+      title: "🛡 <b>Налады аўтаматычнай праверкі на спам</b>"
+      enabled_text: "✅ Уключана"
+      disabled_text: "❌ Выключана"
+      globalban_enabled: "✅ Уключаны"
+      globalban_disabled: "❌ Выключаны"
+      rules_title: "Правілы (${count}):"
+      rules_empty: "Не наладжана"
+      rule_allow: "✅ Дазвол"
+      rule_deny: "❌ Забарона"
+      commands_title: "Даступныя каманды:"
+      commands: |
+        <code>!spam on</code> - уключыць
+        <code>!spam off</code> - выключыць
+        <code>!spam globalban on</code> - уключыць глабальны бан
+        <code>!spam globalban off</code> - выключыць глабальны бан
+        <code>!spam allow тэкст</code> - дазволіць
+        <code>!spam deny тэкст</code> - забараніць
+        <code>!spam remove нумар</code> - выдаліць правіла
+        <code>!spam clear</code> - ачысціць усе правілы
   reset: Налады былі скінутыя
 settings:
     json:
