--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -114,11 +114,48 @@ cmd:
   quote: |
     Для создания цитат используйте бота @QuotLyBot
   cas:
-    disable: CAS Ban отключен
+    disable: CAS Ban выключен
     enable: CAS Ban включен
   banChannel:
-    disable: Ban Channel отключен
+    disable: Ban Channel выключен
     enable: Ban Channel включен
+  spam_settings:
+    enabled: "✅ <b>Автоматическая проверка на спам включена</b>"
+    disabled: "❌ <b>Автоматическая проверка на спам выключена</b>"
+    allow:
+      added: "✅ <b>Добавлено правило разрешения:</b>\n\"${rule}\""
+      error: "❌ <b>Ошибка:</b> Укажите текст правила\n\n<b>Пример:</b> <code>!spam allow продажа курсовых</code>"
+    deny:
+      added: "✅ <b>Добавлено правило запрета:</b>\n\"${rule}\""
+      error: "❌ <b>Ошибка:</b> Укажите текст правила\n\n<b>Пример:</b> <code>!spam deny реклама заработка</code>"
+    remove:
+      success: "✅ <b>Удалено правило:</b>\n\"${rule}\""
+      error: "❌ <b>Ошибка:</b> Неверный номер правила\n\nИспользуйте <code>!spam</code> чтобы увидеть список правил"
+    clear: "✅ <b>Очищены все правила</b> (было: ${count})"
+    globalban:
+      enabled: "✅ <b>Глобальный бан включен</b>\n• Пользователи, заблокированные ИИ в этой группе, будут заблокированы во всех других группах\n• Пользователи, заблокированные ИИ в других группах, будут заблокированы в этой группе"
+      disabled: "❌ <b>Глобальный бан выключен</b>\n• Пользователи, заблокированные ИИ в этой группе, НЕ будут заблокированы в других группах\n• Пользователи, заблокированные ИИ в других группах, НЕ будут заблокированы в этой группе"
+      error: "❌ <b>Ошибка:</b> Используйте <code>!spam globalban on</code> или <code>!spam globalban off</code>"
+    status:
+      title: "🛡 <b>Настройки автоматической проверки на спам</b>"
+      enabled_text: "✅ Включено"
+      disabled_text: "❌ Выключено"
+      globalban_enabled: "✅ Включен"
+      globalban_disabled: "❌ Выключен"
+      rules_title: "Правила (${count}):"
+      rules_empty: "Не настроено"
+      rule_allow: "✅ Разрешение"
+      rule_deny: "❌ Запрет"
+      commands_title: "Доступные команды:"
+      commands: |
+        <code>!spam on</code> - включить
+        <code>!spam off</code> - выключить
+        <code>!spam globalban on</code> - включить глобальный бан
+        <code>!spam globalban off</code> - выключить глобальный бан
+        <code>!spam allow текст</code> - разрешить
+        <code>!spam deny текст</code> - запретить
+        <code>!spam remove номер</code> - удалить правило
+        <code>!spam clear</code> - очистить все правила
   reset: Настройки были сброшены
 settings:
     json:
