--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -117,6 +117,43 @@ cmd:
   banChannel:
     disable: Ban Channel вимкнено
     enable: Ban Channel увімкнено
+  spam_settings:
+    enabled: "✅ <b>Автоматичну перевірку на спам увімкнено</b>"
+    disabled: "❌ <b>Автоматичну перевірку на спам вимкнено</b>"
+    allow:
+      added: "✅ <b>Додано правило дозволу:</b>\n\"${rule}\""
+      error: "❌ <b>Помилка:</b> Вкажіть текст правила\n\n<b>Приклад:</b> <code>!spam allow продаж курсових робіт</code>"
+    deny:
+      added: "✅ <b>Додано правило заборони:</b>\n\"${rule}\""
+      error: "❌ <b>Помилка:</b> Вкажіть текст правила\n\n<b>Приклад:</b> <code>!spam deny реклама заробітку</code>"
+    remove:
+      success: "✅ <b>Видалено правило:</b>\n\"${rule}\""
+      error: "❌ <b>Помилка:</b> Невірний номер правила\n\nВикористайте <code>!spam</code> щоб побачити список правил"
+    clear: "✅ <b>Очищено всі правила</b> (було: ${count})"
+    globalban:
+      enabled: "✅ <b>Глобальний бан увімкнено</b>\n• Користувачі, заблоковані ШІ в цій групі, будуть заблоковані в усіх інших групах\n• Користувачі, заблоковані ШІ в інших групах, будуть заблоковані в цій групі"
+      disabled: "❌ <b>Глобальний бан вимкнено</b>\n• Користувачі, заблоковані ШІ в цій групі, НЕ будуть заблоковані в інших групах\n• Користувачі, заблоковані ШІ в інших групах, НЕ будуть заблоковані в цій групі"
+      error: "❌ <b>Помилка:</b> Використайте <code>!spam globalban on</code> або <code>!spam globalban off</code>"
+    status:
+      title: "🛡 <b>Налаштування автоматичної перевірки на спам</b>"
+      enabled_text: "✅ Увімкнено"
+      disabled_text: "❌ Вимкнено"
+      globalban_enabled: "✅ Увімкнено"
+      globalban_disabled: "❌ Вимкнено"
+      rules_title: "Правила (${count}):"
+      rules_empty: "Не налаштовано"
+      rule_allow: "✅ Дозвіл"
+      rule_deny: "❌ Заборона"
+      commands_title: "Доступні команди:"
+      commands: |
+        <code>!spam on</code> - увімкнути
+        <code>!spam off</code> - вимкнути
+        <code>!spam globalban on</code> - увімкнути глобальний бан
+        <code>!spam globalban off</code> - вимкнути глобальний бан
+        <code>!spam allow текст</code> - дозволити
+        <code>!spam deny текст</code> - заборонити
+        <code>!spam remove номер</code> - видалити правило
+        <code>!spam clear</code> - очистити всі правила
   reset: Налаштування були скинуті
 settings:
     json:
