--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,44 +1,70 @@
 private:
   start: |
-    Привет, <b>${name}</b>!
-    Я помогу тебе администрировать группу.
-    Добавь меня в группу.
+    Привет, <b>${name}</b>! 👋
 
-    /help - помощь
+    Я <b>LyAdminBot</b> - помогу тебе администрировать группу.
+
+    🔧 <b>Мои возможности:</b>
+    • Модерация участников (баны, кики)
+    • Настройка приветствий для новых участников
+    • Защита от спама с помощью ИИ
+    • Статистика активности участников
+    • Extra команды для быстрых ответов
+    • Управление стикерпаками группы
+
+    📝 Используй /help для просмотра всех команд
 
     <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
   btn_add: Добавить в группу
 cmd:
   help: |
-    Я помогаю администрировать группы.
+    🤖 <b>LyAdminBot</b> - бот для администрирования групп
 
-    <b>Список команд:</b>
-    /ping - проверить работу бота
-    /banan - выдать бан
-    /kick - пнуть
-    /del - удалить сообщение
-    /top - топ участников по активности
-    /top_banan - топ участников по времени банана
-    /mystats - статистика в чате
-    /extras - список extra чата
+    📋 <b>ОСНОВНЫЕ КОМАНДЫ:</b>
+    /ping - проверяет работу бота и показывает статистику
+    /mystats - ваша персональная статистика в группе
+    /top - топ самых активных участников группы
+    /top_banan - топ участников по времени банов 🍌
+    /extras - список всех extra команд группы
+    /lang - изменить язык интерфейса
 
-    /lang - изменить язык
+    ⚖️ <b>МОДЕРАЦИЯ:</b>
+    /banan - выдать бан (только админы)
+    /kick - удалить участника из группы (только админы)
+    /del - удалить сообщение (только админы)
+    /quote - создать цитату (нужен @QuotLyBot)
 
-    <code>!welcome</code> - включить/отключить приветствия
-    <code>!gif</code> - добавить/удалить gif в список приветствий
-    <code>!text</code> - добавить/удалить текст в список приветствий
-    <code>!extra arg</code> - создать extra с названием \#arg
-    <code>!extra-max 3</code> - установить максимальное количество extra в сообщении
-    <code>!s 👍</code> - сохранить стикеры/картинку в стикерпак
+    🎉 <b>НАСТРОЙКИ ПРИВЕТСТВИЙ (только админы):</b>
+    <code>!welcome</code> - включить/отключить приветствия новых участников
+    <code>!gif</code> - добавить/удалить GIF в ответ на сообщение
+    <code>!text</code> - добавить/удалить текст в ответ на сообщение
+    <code>!gif-reset</code> - очистить все GIF приветствий
+    <code>!text-reset</code> - очистить все тексты приветствий
 
-    <code>!json</code> - отправить настройки
+    🔧 <b>EXTRA КОМАНДЫ (только админы):</b>
+    <code>!extra название</code> - создать extra команду #название
+    <code>!extra-max 5</code> - максимум extra команд в одном сообщении
 
-    <code>!text-reset</code> - сбросить все тексты приветствий
-    <code>!gif-reset</code> - сбросить все gif приветствий
-    <code>!reset</code> - сбросить настройки группы
+    🛡️ <b>ЗАЩИТА ОТ СПАМА (только админы):</b>
+    <code>!spam</code> - показать настройки спам-фильтра
+    <code>!spam on/off</code> - включить/отключить ИИ проверку
+    <code>!spam globalban on/off</code> - глобальный бан спамеров
+    <code>!cas</code> - включить/отключить CAS защиту
+    <code>!banChannel</code> - банить сообщения от каналов
 
-    <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
-    <b>GitHub:</b> github.com/LyoSU/LyAdminBot
+    ⚙️ <b>НАСТРОЙКИ (только админы):</b>
+    <code>!json</code> - экспортировать настройки группы
+    <code>!reset</code> - сбросить все настройки группы
+    <code>!members</code> - получить список участников в ЛС
+
+    💡 <b>ДОПОЛНИТЕЛЬНЫЕ ФУНКЦИИ:</b>
+    • Автоматическое удаление сообщений на определенных языках
+    • Сохранение статистики активности участников
+    • Система банов 🍌 с автоматическим увеличением времени
+    • Поддержка стикерпаков группы
+
+    <b>👨🏻‍💻 Разработчик:</b> @LyBlog
+    <b>📂 GitHub:</b> github.com/LyoSU/LyAdminBot
   my_stats:
     send_pm: Статистика отправлена в ЛС
     chat: |
