--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -1,43 +1,70 @@
 private:
   start: |
-    Привіт, <b>${name}</b>!
-    Я допоможу тобі адмініструвати групу.
-    Додай мене в групу.
+    Привіт, <b>${name}</b>! 👋
 
-    /help - допомога
+    Я <b>LyAdminBot</b> - допоможу тобі адмініструвати групу.
+
+    🔧 <b>Мої можливості:</b>
+    • Модерація учасників (бани, кіки)
+    • Налаштування привітань для нових учасників
+    • Захист від спаму за допомогою ШІ
+    • Статистика активності учасників
+    • Extra команди для швидких відповідей
+    • Управління стікерпаками групи
+
+    📝 Використай /help для перегляду всіх команд
 
     <b>👨🏻‍💻 Блог розробника:</b> @LyBlog
   btn_add: Додати в групу
 cmd:
   help: |
-    Я допомагаю адмініструвати групи.
+    🤖 <b>LyAdminBot</b> - бот для адміністрування груп
 
-    <b>Список команд:</b>
-    /ping - перевірити роботу бота
-    /banan - видати бан
-    /kick - виштовхнути
-    /del - видалити повідомлення
-    /top - топ учасників за активностю
-    /top_banan - топ учасників за часом банана
-    /mystats - статистика в чаті
-    /extras - список extra чата
+    📋 <b>ОСНОВНІ КОМАНДИ:</b>
+    /ping - перевіряє роботу бота та показує статистику
+    /mystats - ваша персональна статистика в групі
+    /top - топ найактивніших учасників групи
+    /top_banan - топ учасників за часом банів 🍌
+    /extras - список всіх extra команд групи
+    /lang - змінити мову інтерфейсу
 
-    /lang - змінити мову
+    ⚖️ <b>МОДЕРАЦІЯ:</b>
+    /banan - видати бан (тільки адміни)
+    /kick - видалити учасника з групи (тільки адміни)
+    /del - видалити повідомлення (тільки адміни)
+    /quote - створити цитату (потрібен @QuotLyBot)
 
-    <code>!welcome</code> - увімкнути/вимкнути привітання
-    <code>!gif</code> - додати/видалити гіф в список привітань
-    <code>!text</code> - додати/видалити текст в список привітань
-    <code>!extra arg</code> - створити extra з назвою \#arg
-    <code>!extra-max 3</code> - встановити максимальну кількість extra в повідомленні
+    🎉 <b>НАЛАШТУВАННЯ ПРИВІТАНЬ (тільки адміни):</b>
+    <code>!welcome</code> - увімкнути/вимкнути привітання нових учасників
+    <code>!gif</code> - додати/видалити GIF у відповідь на повідомлення
+    <code>!text</code> - додати/видалити текст у відповідь на повідомлення
+    <code>!gif-reset</code> - очистити всі GIF привітань
+    <code>!text-reset</code> - очистити всі тексти привітань
 
-    <code>!json</code> - відправити налаштування
+    🔧 <b>EXTRA КОМАНДИ (тільки адміни):</b>
+    <code>!extra назва</code> - створити extra команду #назва
+    <code>!extra-max 5</code> - максимум extra команд в одному повідомленні
 
-    <code>!text-reset</code> - скинути всі тексти привітань
-    <code>!gif-reset</code> - скинути всі gif привітань
-    <code>!reset</code> - скинути налаштування групи
+    🛡️ <b>ЗАХИСТ ВІД СПАМУ (тільки адміни):</b>
+    <code>!spam</code> - показати налаштування спам-фільтра
+    <code>!spam on/off</code> - увімкнути/вимкнути ШІ перевірку
+    <code>!spam globalban on/off</code> - глобальний бан спамерів
+    <code>!cas</code> - увімкнути/вимкнути CAS захист
+    <code>!banChannel</code> - банити повідомлення від каналів
 
-    <b>👨🏻‍💻 Блог розробника:</b> @LyBlog
-    <b>GitHub:</b> github.com/LyoSU/LyAdminBot
+    ⚙️ <b>НАЛАШТУВАННЯ (тільки адміни):</b>
+    <code>!json</code> - експортувати налаштування групи
+    <code>!reset</code> - скинути всі налаштування групи
+    <code>!members</code> - отримати список учасників в ПП
+
+    💡 <b>ДОДАТКОВІ ФУНКЦІЇ:</b>
+    • Автоматичне видалення повідомлень на певних мовах
+    • Збереження статистики активності учасників
+    • Система банів 🍌 з автоматичним збільшенням часу
+    • Підтримка стікерпаків групи
+
+    <b>👨🏻‍💻 Розробник:</b> @LyBlog
+    <b>📂 GitHub:</b> github.com/LyoSU/LyAdminBot
   my_stats:
     send_pm: Статистика відправлена в ПП
     chat: |
