--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -1,69 +1,43 @@
 private:
   start: |
-    Привіт, <b>${name}</b>! 👋
+    Привіт, <b>${name}</b>!
 
-    Я <b>LyAdminBot</b> - допоможу тобі адмініструвати групу.
+    <b>LyAdminBot</b> — бот з ШІ модерацією для твоєї групи.
 
-    🔧 <b>Мої можливості:</b>
-    • Модерація учасників (бани, кіки)
-    • Налаштування привітань для нових учасників
-    • Захист від спаму за допомогою ШІ
-    • Статистика активності учасників
-    • Extra команди для швидких відповідей
-    • Управління стікерпаками групи
+    🤖 <b>ШІ автоматично видаляє:</b>
+    • Спам та рекламу
+    • Скам та шахрайство
+    • Підозрілі посилання
 
-    📝 Використай /help для перегляду всіх команд
+    Просто додай в групу і зроби адміном — все працює автоматично.
 
-    <b>👨🏻‍💻 Блог розробника:</b> @LyBlog
+    /help — всі команди
   btn_add: Додати в групу
 cmd:
   help: |
-    🤖 <b>LyAdminBot</b> - бот для адміністрування груп
+    🤖 <b>LyAdminBot</b>
 
-    📋 <b>ОСНОВНІ КОМАНДИ:</b>
-    /ping - перевіряє роботу бота та показує статистику
-    /mystats - ваша персональна статистика в групі
-    /top - топ найактивніших учасників групи
-    /top_banan - топ учасників за часом банів 🍌
-    /extras - список всіх extra команд групи
-    /lang - змінити мову інтерфейсу
+    <b>ШІ МОДЕРАЦІЯ:</b>
+    <code>!spam</code> — налаштування ШІ фільтра
+    <code>!spam on/off</code> — увімкнути/вимкнути
+    <code>!spam globalban on/off</code> — глобальний бан
+    <code>!cas</code> — CAS захист
+    <code>!banChannel</code> — бан каналів
 
-    ⚖️ <b>МОДЕРАЦІЯ:</b>
-    /banan - видати бан (тільки адміни)
-    /kick - видалити учасника з групи (тільки адміни)
-    /del - видалити повідомлення (тільки адміни)
+    <b>МОДЕРАЦІЯ:</b>
+    /banan — бан  •  /kick — кік  •  /del — видалити
 
-    🎉 <b>НАЛАШТУВАННЯ ПРИВІТАНЬ (тільки адміни):</b>
-    <code>!welcome</code> - увімкнути/вимкнути привітання нових учасників
-    <code>!gif</code> - додати/видалити GIF у відповідь на повідомлення
-    <code>!text</code> - додати/видалити текст у відповідь на повідомлення
-    <code>!gif-reset</code> - очистити всі GIF привітань
-    <code>!text-reset</code> - очистити всі тексти привітань
+    <b>СТАТИСТИКА:</b>
+    /mystats — твоя статистика
+    /top — топ активних  •  /top_banan — топ банів
 
-    🔧 <b>EXTRA КОМАНДИ (тільки адміни):</b>
-    <code>!extra назва</code> - створити extra команду #назва
-    <code>!extra-max 5</code> - максимум extra команд в одному повідомленні
+    <b>ПРИВІТАННЯ:</b>
+    <code>!welcome</code> — вкл/викл
+    <code>!gif</code> / <code>!text</code> — додати контент
 
-    🛡️ <b>ЗАХИСТ ВІД СПАМУ (тільки адміни):</b>
-    <code>!spam</code> - показати налаштування спам-фільтра
-    <code>!spam on/off</code> - увімкнути/вимкнути ШІ перевірку
-    <code>!spam globalban on/off</code> - глобальний бан спамерів
-    <code>!cas</code> - увімкнути/вимкнути CAS захист
-    <code>!banChannel</code> - банити повідомлення від каналів
-
-    ⚙️ <b>НАЛАШТУВАННЯ (тільки адміни):</b>
-    <code>!json</code> - експортувати налаштування групи
-    <code>!reset</code> - скинути всі налаштування групи
-    <code>!members</code> - отримати список учасників в ПП
-
-    💡 <b>ДОДАТКОВІ ФУНКЦІЇ:</b>
-    • Автоматичне видалення повідомлень на певних мовах
-    • Збереження статистики активності учасників
-    • Система банів 🍌 з автоматичним збільшенням часу
-    • Підтримка стікерпаків групи
-
-    <b>👨🏻‍💻 Розробник:</b> @LyBlog
-    <b>📂 GitHub:</b> github.com/LyoSU/LyAdminBot
+    <b>ІНШЕ:</b>
+    <code>!extra назва</code> — швидкі команди #назва
+    /extras — список  •  /lang — мова  •  /ping — статус
   my_stats:
     send_pm: Статистика відправлена в ПП
     chat: |
