--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -1,69 +1,43 @@
 private:
   start: |
-    Привет, <b>${name}</b>! 👋
+    Привет, <b>${name}</b>!
 
-    Я <b>LyAdminBot</b> - помогу тебе администрировать группу.
+    <b>LyAdminBot</b> — бот с ИИ модерацией для твоей группы.
 
-    🔧 <b>Мои возможности:</b>
-    • Модерация участников (баны, кики)
-    • Настройка приветствий для новых участников
-    • Защита от спама с помощью ИИ
-    • Статистика активности участников
-    • Extra команды для быстрых ответов
-    • Управление стикерпаками группы
+    🤖 <b>ИИ автоматически удаляет:</b>
+    • Спам и рекламу
+    • Скам и мошенничество
+    • Подозрительные ссылки
 
-    📝 Используй /help для просмотра всех команд
+    Просто добавь в группу и сделай админом — всё работает автоматически.
 
-    <b>👨🏻‍💻 Блог разработчика:</b> @LyBlog
+    /help — все команды
   btn_add: Добавить в группу
 cmd:
   help: |
-    🤖 <b>LyAdminBot</b> - бот для администрирования групп
+    🤖 <b>LyAdminBot</b>
 
-    📋 <b>ОСНОВНЫЕ КОМАНДЫ:</b>
-    /ping - проверяет работу бота и показывает статистику
-    /mystats - ваша персональная статистика в группе
-    /top - топ самых активных участников группы
-    /top_banan - топ участников по времени банов 🍌
-    /extras - список всех extra команд группы
-    /lang - изменить язык интерфейса
+    <b>ИИ МОДЕРАЦИЯ:</b>
+    <code>!spam</code> — настройки ИИ фильтра
+    <code>!spam on/off</code> — включить/выключить
+    <code>!spam globalban on/off</code> — глобальный бан
+    <code>!cas</code> — CAS защита
+    <code>!banChannel</code> — бан каналов
 
-    ⚖️ <b>МОДЕРАЦИЯ:</b>
-    /banan - выдать бан (только админы)
-    /kick - удалить участника из группы (только админы)
-    /del - удалить сообщение (только админы)
+    <b>МОДЕРАЦИЯ:</b>
+    /banan — бан  •  /kick — кик  •  /del — удалить
 
-    🎉 <b>НАСТРОЙКИ ПРИВЕТСТВИЙ (только админы):</b>
-    <code>!welcome</code> - включить/отключить приветствия новых участников
-    <code>!gif</code> - добавить/удалить GIF в ответ на сообщение
-    <code>!text</code> - добавить/удалить текст в ответ на сообщение
-    <code>!gif-reset</code> - очистить все GIF приветствий
-    <code>!text-reset</code> - очистить все тексты приветствий
+    <b>СТАТИСТИКА:</b>
+    /mystats — твоя статистика
+    /top — топ активных  •  /top_banan — топ банов
 
-    🔧 <b>EXTRA КОМАНДЫ (только админы):</b>
-    <code>!extra название</code> - создать extra команду #название
-    <code>!extra-max 5</code> - максимум extra команд в одном сообщении
+    <b>ПРИВЕТСТВИЯ:</b>
+    <code>!welcome</code> — вкл/выкл
+    <code>!gif</code> / <code>!text</code> — добавить контент
 
-    🛡️ <b>ЗАЩИТА ОТ СПАМА (только админы):</b>
-    <code>!spam</code> - показать настройки спам-фильтра
-    <code>!spam on/off</code> - включить/отключить ИИ проверку
-    <code>!spam globalban on/off</code> - глобальный бан спамеров
-    <code>!cas</code> - включить/отключить CAS защиту
-    <code>!banChannel</code> - банить сообщения от каналов
-
-    ⚙️ <b>НАСТРОЙКИ (только админы):</b>
-    <code>!json</code> - экспортировать настройки группы
-    <code>!reset</code> - сбросить все настройки группы
-    <code>!members</code> - получить список участников в ЛС
-
-    💡 <b>ДОПОЛНИТЕЛЬНЫЕ ФУНКЦИИ:</b>
-    • Автоматическое удаление сообщений на определенных языках
-    • Сохранение статистики активности участников
-    • Система банов 🍌 с автоматическим увеличением времени
-    • Поддержка стикерпаков группы
-
-    <b>👨🏻‍💻 Разработчик:</b> @LyBlog
-    <b>📂 GitHub:</b> github.com/LyoSU/LyAdminBot
+    <b>ПРОЧЕЕ:</b>
+    <code>!extra название</code> — быстрые команды #название
+    /extras — список  •  /lang — язык  •  /ping — статус
   my_stats:
     send_pm: Статистика отправлена в ЛС
     chat: |
