--- a/locales/ru.yaml
+++ b/locales/ru.yaml
@@ -26,6 +26,7 @@ cmd:
 
     <b>МОДЕРАЦИЯ:</b>
     /banan — бан  •  /kick — кик  •  /del — удалить
+    /report или @admin — проверить на спам (в ответ)
 
     <b>СТАТИСТИКА:</b>
     /mystats — твоя статистика
@@ -196,3 +197,40 @@ only_admin: Команду может использовать только ад
 
 global_ban:
   kicked: "Пользователь ${name} был исключен, так как он глобально забанен ИИ. Причина: ${reason}"
+
+report:
+  only_group: "⚠️ Работает только в группах"
+  need_reply: "↩️ Ответь на сообщение, которое хочешь проверить"
+  cant_report_bot: "🤖 Ботов не проверяем"
+  cant_report_self: "🙃 Себя нельзя"
+  rate_limited: "⏳ Слишком много репортов. Подожди ${seconds}с"
+  spam_check_disabled: "❌ Проверка выключена в этой группе"
+  no_content: "📭 Нет текста для анализа"
+  analyzing: "🔍 Проверяю..."
+  spam_found: |
+    🚨 <b>Спам!</b>
+
+    👤 ${target}
+    📊 Уверенность: ${confidence}%
+    📝 ${reason}
+
+    ✅ ${action}
+
+    <i>Репорт от ${reporter}</i>
+  suspicious: |
+    ⚠️ <b>Подозрительно</b>
+
+    👤 ${target}
+    📊 Уверенность: ${confidence}%
+    📝 ${reason}
+
+    <i>Действий не предпринято. Админы уведомлены.</i>
+    <i>Репорт от ${reporter}</i>
+  clean: |
+    ✅ <b>Чисто</b>
+
+    👤 ${target}
+    📊 Уверенность: ${confidence}%
+
+    <i>Проверил ${reporter}</i>
+  error: "❌ Ошибка. Попробуй позже."
