--- a/locales/uk.yaml
+++ b/locales/uk.yaml
@@ -26,6 +26,7 @@ cmd:
 
     <b>МОДЕРАЦІЯ:</b>
     /banan — бан  •  /kick — кік  •  /del — видалити
+    /report або @admin — перевірити на спам (у відповідь)
 
     <b>СТАТИСТИКА:</b>
     /mystats — твоя статистика
@@ -202,3 +203,40 @@ only_admin: Цю команду може використовувати тіль
 
 global_ban:
   kicked: "Користувача ${name} було вилучено, оскільки він глобально забанений ШІ. Причина: ${reason}"
+
+report:
+  only_group: "⚠️ Працює тільки в групах"
+  need_reply: "↩️ Відповідай на повідомлення, яке хочеш перевірити"
+  cant_report_bot: "🤖 Ботів не перевіряємо"
+  cant_report_self: "🙃 Себе не можна"
+  rate_limited: "⏳ Забагато репортів. Почекай ${seconds}с"
+  spam_check_disabled: "❌ Перевірка вимкнена в цій групі"
+  no_content: "📭 Нема тексту для аналізу"
+  analyzing: "🔍 Перевіряю..."
+  spam_found: |
+    🚨 <b>Спам!</b>
+
+    👤 ${target}
+    📊 Впевненість: ${confidence}%
+    📝 ${reason}
+
+    ✅ ${action}
+
+    <i>Репорт від ${reporter}</i>
+  suspicious: |
+    ⚠️ <b>Підозріло</b>
+
+    👤 ${target}
+    📊 Впевненість: ${confidence}%
+    📝 ${reason}
+
+    <i>Дій не вжито. Адмінів повідомлено.</i>
+    <i>Репорт від ${reporter}</i>
+  clean: |
+    ✅ <b>Чисто</b>
+
+    👤 ${target}
+    📊 Впевненість: ${confidence}%
+
+    <i>Перевірив ${reporter}</i>
+  error: "❌ Помилка. Спробуй пізніше."
